# dualpantoframework

./: .eslintignore  .eslintrc.yml  .gitignore  .gitmodules  ConfigDraft.json  DoomTutorial.js  Framework.js  GenerateConfig.js  GenerateHardwareConfig.js  Makefile  MoveObject.js  Pantograph.js  Polar.js  Protocol.md  README.md  Vector.js  binding.gyp  cc.bat  doku.md  dp_workspace.code-workspace  homefinder-template.js  kinematic.html  lectureDemo.js  main.js  obstacle.js  package.json  panto-connector.js  persistent.json  posTest.js  readme.md  sample_positions  serial.c  serial.cpp  serialMerged.c  serialToCoordinates.py  serialWin.c  test.exp  test.js  unix-end.cpp  worldLoader.js  (+1 more)
.circleci/: config.yml
DoomProjects(to be moved to the doom project)/: Vector.js  package.json
ESP32_PSRAM_Test/: README  platformio.ini
ESP32_PSRAM_Test/src/: main.cpp
Firmware/: .gitignore  Firmware.ino  GenerateHardwareConfig.js  Makefile  panto.h  platformio.ini  utils.h
Firmware/Arduino/: panto.hpp  utils.hpp
Firmware/BuildCache/: .gitignore
Firmware/ESP32/: ESP32.ino  collider.cpp  collider.hpp  godObject.cpp  godObject.hpp  main.cpp  obstacle.cpp  obstacle.hpp  panto.cpp  panto.hpp  pantoPhysics.cpp  pantoPhysics.hpp  serial.cpp  serial.hpp  task.cpp  task.hpp  utils.cpp  utils.hpp
Firmware/_.vscode/: Readme.txt  arduino.json  c_cpp_properties.json
Firmware/include/: ioMain.hpp  physicsMain.hpp  serial.hpp  utils.hpp
Firmware/src/: main.cpp  physicsMain.cpp
Hardware/: BP1.json  LP1.json  LP_PCB.json  LP_PCB_ESP32.json  angie.json  barbie.json  chantalle.json  doerte.json  mab_mag_dir_esp32.json
Movement Debugging/: debuglog_OscillationRectangle4:48:32 PM_1.csv  debuglog_OscillationRectangle5:00:09 PM_2.csv  debuglog_OscillationRectangle5:02:41 PM_3.csv  debuglog_OscillationRectangle5:10:07 PM_4.csv  debuglog_OscillationRectangle5:16:23 PM_4.csv  debuglog_OscillationRectangle5:21:26 PM_4.csv  debuglog_OscillationRectangle5:27:38 PM_doerte.csv  debuglog_both_idle_5s.csv  debuglog_both_idle_with_angle.csv  debuglog_flicker_it_30s.csv  debuglog_idle_strong_flicker_it.csv  evaluation.ipynb  evaluation.py
Panto/: BP1.json  GenerateConfig.js  Panto.ino  panto.h
Protocol/: protocol.cpp  protocol.hpp  setup.js
Protocol/include/: protocol.hpp
Protocol/src/: protocol.cpp
Utils/: GenerateHardwareConfig.js  README.md  serialToCoordinates.py  test.js
Utils/Backtrace/: backtrace.sh
Utils/CommitHooks/: createJsCommitHook.js  flagExecutable.sh
Utils/GeoGebra/: forwardKinematics.txt  inverseKinematics.txt
Utils/Scripts/: docs.js  generateHardwareConfig.js  run.js  tools.js
Utils/Serial/: serial.cpp
Utils/ViDeb/: index.html  index.js
Utils/plotter/: index.html  panto.js  plotter.js  style.css
Utils/svgConverter/: fileCreator.js  meshCreator.js  obstacleCreator.js  svgConverter.js  svgToJs.js  utils.js
docs/: documentation.config.yml  dual-panto-framework.md  geometry.md
docs/dev/: configuration-id.md  protocol.md
docs/getting-started/: 01-git.md  02-gitignore.md  03-npm.md  04-install.md  05-structure.md  06-hello-world.md  07-async-await.md  README.md  update.md
documentation/: device.md  framework.md  vector.md
documentation/classes/: broker.md  device.md  hapticObject.md  index.md  player.md  positionListener.md  vector.md  voice-interaction.md
documentation/protocol/: protocol.md
documentation/setup/: linux.md  macos.md  setup.md  windows.md
examples/basic/: connect.js  logPos.js  mirrorme.js  move.js  updatesPerSecond.js
examples/calibration/: calibratePanto.js  movePantoToStartingPosition.js
examples/hapticObject/: collider.js  enableDisable.js  forcefield.js  hapticObject.js  hardStep.js  meshTests.js  rails.js  testSceneB.js  trace.js  trigger.js
examples/homefinder/: dynamicHomefinder.js  dynamicHomefinder_wrongBranch.js  helloWorld.js  homefinder.js
examples/match/: catch.js  match.js
examples/obstacles/: obstacles.js
examples/precisionTest/: corridor.js  gap1mm.js  move.js  roomFractal.js
examples/simple/: simple.js
examples/tools/: calibratePantograph.js
examples/tween/: calibrationTest.js  circular.js  linear.js  (+4 more)
firmware/: .gitignore  commands.h  config.example.h  config_helper.h  crc8.ino  device_id.h  device_id.ino  firmware.ino  motor.h  platformio.ini  protocol.h  protocol.ino  protocol_read.ino  protocol_write.ino
hardware/: LP1.json  LP_PCB.json  angie.json  chantalle.json  doerte.json  ember.json  fiona.json  mab_opt2k4_dir_esp32.json
lib/: broker.js  collider.js  commands.js  device.js  dualpantoframework.js  forcefield.js  forcefieldHandler.js  geometry.js  handle.js  handleMovement.js  hapticObject.js  legacy-broker.js  message.js  motor.js  moveable-object.js  moveableObject.js  obstacle.js  pid.js  player.js  positionListener.js  protocol.js  shared.js  soundfield.js  triggerfield.js  tween-generator.js  util.js  vector.js  voice-interaction.js
scripts/: docs.js
studentside/: HelloStudentWorld.js  homefinder.js
test/: vector.js
utils/serial/: CMakeLists.txt  binding.gyp
utils/serial/include/: libInterface.hpp  packet.hpp  serial.hpp  serial_export.hpp  standalone.hpp
utils/serial/src/cppLib/: lib.cpp
utils/serial/src/crashAnalyzer/: analyze.cpp  analyze.cpp.orig  buffer.cpp
utils/serial/src/node/: main.cpp  poll.cpp  send.cpp  setup.cpp
utils/serial/src/serial/: packet.cpp  shared.cpp  unix.cpp  win.cpp
utils/serial/src/standalone/: main.cpp  standalone.cpp
utils/serial/unity/: Serial.cs  linux.sh  mac.sh  win.bat
(+273 files in other folders)
